ADD_EXECUTABLE(EventLoop_test1 EventLoop_test1.cpp)
TARGET_LINK_LIBRARIES(EventLoop_test1 muduo_net pthread)

ADD_EXECUTABLE(EventLoop_test2 EventLoop_test2.cpp)
TARGET_LINK_LIBRARIES(EventLoop_test2 muduo_net pthread)

ADD_EXECUTABLE(EventLoop_test3 EventLoop_test3.cpp)
TARGET_LINK_LIBRARIES(EventLoop_test3 muduo_net)